--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -47,7 +47,7 @@
       <i class="fas fa-users mr-3"></i>
       Users
     </a>
-    <a href="#" class="flex items-center px-4 py-2 text-gray-700 hover:text-white hover:bg-gray-700 rounded-md transition">
+    <a href="/admin/products" class="flex items-center px-4 py-2 text-gray-700 hover:text-white hover:bg-gray-700 rounded-md transition">
       <i class="fas fa-boxes mr-3"></i>
       Products
     </a>
