--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -17,15 +17,15 @@
         <img src="./images/logo.png" class="logo" alt="logo"><div class="pl-2">WOODLAND</div>
         </div>
     <div class="flex space-x-6">
-      <a href="#" class="text-gray-600 hover:text-gray-900">Home</a>
-      <a href="#" class="text-gray-600 hover:text-gray-900">Shop</a>
+      <a href="/" class="text-gray-600 hover:text-gray-900">Home</a>
+      <a href="/shop" class="text-gray-600 hover:text-gray-900">Shop</a>
       <a href="#" class="text-gray-600 hover:text-gray-900">About</a>
       <a href="#" class="text-gray-600 hover:text-gray-900">Contact</a>
     </div>
     <div class="flex space-x-4">
-      <% if (!user) { %>
+
         <a href="/signIn" class="text-gray-600 hover:text-gray-900">Sign In</a>
-      <% } %>
+
       <a href="#" class="text-gray-600 hover:text-gray-900 search">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -43,13 +43,13 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
           </svg>
         </button>
-      <% if(user){ %>
+
         <!-- Dropdown Menu -->
         <div id="dropdownMenu" class="hidden transition-all duration-200 ease-in-out transform scale-95 opacity-0 absolute right-0 mt-2 w-40 bg-white rounded-md shadow-lg z-10">
           <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Profile</a>
           <a href="/logout" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Logout</a>
         </div>
-        <% } %>
+  
       </div>
     </div>
   </nav>
