--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -24,9 +24,9 @@
     </div>
     <div class="flex space-x-4">
 
-      
+      <%if(!user){%>
         <a href="/signIn" class="text-gray-600 hover:text-gray-900">Sign In</a>
-
+        <%}%>
       <a href="#" class="text-gray-600 hover:text-gray-900 search">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -38,6 +38,9 @@
         </svg>
       </a>
 
+      <%if(user){%>
+      <h6><%=user.name%></h6>
+      <%}%>
       <div class="relative" id="profileDropdown">
         <button id="profileBtn" class="text-gray-600 hover:text-gray-900 focus:outline-none">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -46,10 +49,12 @@
         </button>
 
         <!-- Dropdown Menu -->
+        <%if(user){%>
         <div id="dropdownMenu" class="hidden transition-all duration-200 ease-in-out transform scale-95 opacity-0 absolute right-0 mt-2 w-40 bg-white rounded-md shadow-lg z-10">
           <a href="/profile" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">My Profile</a>
           <a href="/logout" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Logout</a>
         </div>
+        <%}%>
   
       </div>
     </div>
