--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -185,4 +185,10 @@
       prevEl: '.swiper-button-prev',
     },
   });
+
+  window.addEventListener('pageshow', function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
 </script>
