--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -89,6 +89,13 @@
       }
     }
   });
+
+  window.addEventListener('pageshow', function (event) {
+    if (event.persisted) {
+      window.location.reload();
+    }
+  });
+
 </script>
 
 <%- include('../partials/admin/footer') %>
